# predictive-agent

predictive-maintenance/: .gitignore  1-data-exploration.ipynb  mlrun-env-secret.yaml  mlrun.env  optimus-secret.yaml  predictive-maintenance.ipynb  predictive-workflows.ipynb  project_setup.py  requirements.txt
predictive-maintenance/agents/agent/: legal-agent.yaml  maintenance-agent-as-tool.yaml  maintenance-agent.yaml  mlrun-agent-as-tool.yaml  mlrun-agent.yaml  procurement-agent-as-tool.yaml  procurement-agent.yaml  procurement-support.yaml  supervisor-agent-as-tool.yaml  supervisor-agent.yaml  test-agent.yaml  tool-agent.yaml
predictive-maintenance/agents/tool-maintenance/: Dockerfile  pyproject.toml
predictive-maintenance/agents/tool-mlrun/: Dockerfile  pyproject.toml
predictive-maintenance/agents/tool-mlrun/deployment/: deployment.yaml  mcpserver.yaml  service.yaml
predictive-maintenance/agents/tool-mlrun/src/: mcp.py
predictive-maintenance/config/: config.py  config.yaml  pipeline_config.yaml
predictive-maintenance/dockerfiles/: Dockerfile  Makefile  requirements.txt
predictive-maintenance/maintenance-data/: README.md  add_service_manual_column.sql  check_schema.py  database-config.sql  db_config.py  generate_manuals.py  ingest_data.py  migrate_schema.sql  requirements.txt  sample_data_insert.sql  update_service_manual_content.py
predictive-maintenance/procurement-data/: README.md  db_config.py  populate_procurement.py  procurement-config.sql  procurement_queries.sql
predictive-maintenance/src/: data_generator.py  utils.py
(+223 files in other folders)
